Fixed image stretching on resizing

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -203,7 +203,6 @@
   }
   #bakan-desc-img-one {
     margin: 5vw 0 -10vw 0;
-    width: 70vw;
   }
   .box-one {
     display: flex;
